mattermost-deployments/templates/mattermost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mattermost
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mattermost
  template:
    metadata:
      labels:
        app: mattermost
    spec:
      containers:
      - name: mattermost
        image: mattermost/mattermost-team-edition:latest
        volumeMounts:
        - name: mattermost-data
          mountPath: /mattermost/data
      volumes:
      - name: mattermost-data
        persistentVolumeClaim:
          claimName: mattermost-pvc
