mattermost-deployments/templates/mattermost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost
  namespace: ${NAMESPACE}
spec:
  selector:
    app: mattermost
  ports:
  - port: 8065
    targetPort: 8065
  type: ClusterIP
